--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple TypeScript mock project to understand TypeScript capabilities",
   "main": "index.js",
   "scripts": {
-    "tsc": "tsc index.ts --watch",
+    "clean": "rmdir /S /Q dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
